# minimal-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  minimal_cli.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: auto-update-deps.yml  ci.yml  release.yml
tests/: minimal_cli_test.py
